moving away from aws upload and handling file on client side

--- a/views/index.html
+++ b/views/index.html
@@ -7,8 +7,16 @@
     <link rel="stylesheet" href="assets/stylesheets/css.css">
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <!-- for file uploads -->
+    <script src="http://rawgit.com/blueimp/jQuery-File-Upload/master/js/vendor/jquery.ui.widget.js"></script>
+    <script src="http://rawgit.com/blueimp/jQuery-File-Upload/master/js/jquery.iframe-transport.js"></script>
+    <script src="http://rawgit.com/blueimp/jQuery-File-Upload/master/js/jquery.fileupload.js"></script>
+
+
+
     <script src="vendor/angular/angular.min.js"></script>
     <script src="vendor/angular-ui-router/release/angular-ui-router.js"></script>
+    <script src="vendor/angular-resource/angular-resource.js"></script>
     <script src="vendor/ng-file-upload/ng-file-upload-all.min.js"></script>
 
     <script src="app/notify.js"></script>
@@ -16,6 +24,7 @@
     <script src="app/file-upload/file-upload-controller.js"></script>
     <script src="app/login/login-controller.js"></script>
     <script src="app/notify/notify-controller.js"></script>
+    <script src="app/file-upload/upload-directive.js"></script>
 
   </head>
   <body>
