now adding csv object to scope

--- a/src/app/file-upload/upload.html
+++ b/src/app/file-upload/upload.html
@@ -1,2 +1,5 @@
+<div>
+  <input id='testUpload' type='file' fileupload name='files[]' model='$parent' > 
+  {{members}}
+</div>
 
-  <input id='testUpload' type='file' fileupload name='files[]' data-url='/api/fileupload' multiple done='uploadFinished(e, data)'> 
