--- a/views/index.html
+++ b/views/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html ng-app="notify">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Notify</title>
@@ -29,12 +29,11 @@
 
     <script src="app/common/members-service.js"></script>
 
-  </head>
-  <body>
-    <span> will need to clean this up.  This is the api backend for the ionic app however will also have a way to upload a csv to the database {{members}}</span>
+</head>
+<body>
+    <span> will need to clean this up.  This is the api backend for the ionic app however will also have a way to upload a csv to the database</span>
     <a ui-sref="login">login</a>
     <a ui-sref="notify">Notify</a>
-    <
     <div ui-view class="content"></div>
-  </body>
+</body>
 </html>
